# erpnext-vat-mtd

./: .gitignore  README.md  development.md  pyproject.toml
.devcontainer/: docker-compose.yml
uk_vat/: hooks.py
uk_vat/fixtures/: custom_field.json
uk_vat/uk_vat_return/doctype/hmrc_api_settings/: hmrc_api_settings.json
uk_vat/uk_vat_return/doctype/uk_vat_return/: uk_vat_return.py
uk_vat/uk_vat_return/hmrc_api/: fraud_prevention.py  vat.py
