[project]
name = "uk_vat"
authors = [
    { name = "Adam Ravo" }
]
description = "UK VAT MTD Integration"
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
